# supervised_rewiring_C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  load_mnist.c  load_mnist.h  main.c  main_math_test.c  main_sparseNN_x86.c  main_test_gradient.c  main_test_math.c  main_train_network.c  math_operations.c  math_operations.h  test_load_mnist.c  test_math.c  test_math.h  test_network_gradient.c  test_network_gradient.h  test_network_gradient_verification.py  train_network.c  train_network.h
